--- a/config.conf
+++ b/config.conf
@@ -1,4 +1,4 @@
-[PATHS]
+[PATH]
 main_filename = "/Users/nathaliewillems/Box/Projects/Genomics/data/UKBB_Data/main_data/ukb41268_head100.csv"
 out_path = "./output_tests"
 out_filename = "test_cohort.txt"
