added os path join for config.conf and updated template

--- a/config_template.conf
+++ b/config_template.conf
@@ -1,3 +1,8 @@
 # This file is used in conjunction with main.py, a function that is intended to be run from the command line and
 # provides a user interface for interaction.
 # Leave blank if you would like this to be created automatically.
+[PATHS]
+main_filaname=
+gp_clinical_file=
+out_path=
+out_filename=
